# clevercolab-classifier

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  LOCAL_DEV.md  README.md  prd.md
backend/: pyproject.toml
backend/app/: config.py  local_server.py
backend/app/models/: document.py  schemas.py
backend/app/prompts/: classify.py  classify_extract.py  extract.py
backend/app/services/: analyzer.py  archiver.py  classifier.py  consistency.py  extractor.py  llm.py  ocr.py  pipeline.py  post_validate.py  renamer.py  reporter.py  splitter.py
frontend/: CLAUDE.md  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/components/download/: DownloadButton.tsx
frontend/src/components/processing/: ProgressTracker.tsx
frontend/src/components/report/: AlertList.tsx  DocumentTable.tsx  MissingDocs.tsx  ReportSummary.tsx
frontend/src/components/upload/: DropZone.tsx  FileList.tsx
frontend/src/hooks/: useFileUpload.ts  useJobProgress.ts
frontend/src/lib/: api.ts  types.ts
